# crispify-v2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING.md  codex-fix-report.md  gradle.properties  test_examples.md
.agent-os/: agent-instructions.md
.agent-os/docs/: claude-hooks-guide.md  github-workflow.md  post-imp.md  subagent-usage-guide.md
.agent-os/instructions/core/: create-spec.md  create-tasks.md  execute-task.md  execute-tasks.md  post-execution-tasks.md
.agent-os/instructions/meta/: pre-flight.md
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/recaps/: 2025-08-28-first-launch-screen.md  2025-08-29-llm-integration.md  2025-08-29-process-text-intent-handler.md  2025-08-29-test-infrastructure-fixes.md
.agent-os/scripts/: commit-task.sh  install-hooks.sh  start-feature.sh  validate-workflow.sh
.agent-os/specs/2025-08-28-first-launch-screen/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-28-first-launch-screen/sub-specs/: technical-spec.md
.agent-os/specs/2025-08-29-llm-integration/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-29-llm-integration/sub-specs/: technical-spec.md
.agent-os/specs/2025-08-29-model-inference-llama-cpp/: spec-lite.md  spec.md  tasks.md  testing-issues.md
.agent-os/specs/2025-08-29-model-inference-llama-cpp/sub-specs/: technical-spec.md
.agent-os/specs/2025-08-29-process-text-intent-handler/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-29-process-text-intent-handler/sub-specs/: technical-spec.md
.agent-os/specs/2025-08-29-test-infrastructure-fixes/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-29-test-infrastructure-fixes/sub-specs/: technical-spec.md
.agent-os/standards/: tech-stack.md
.agent-os/standards/code-style/: javascript-style.md
.claude/: settings.json
.claude/commands/: context7.md  execute-tasks.md
.claude/hooks/: check-dependencies.sh  pre-commit-checks.sh  validate-manifest.sh
.github/: pull_request_template.md
.github/workflows/: gradle.yml
_docs/: PRD.md
app/: build.gradle.kts
app/src/androidTest/java/com/clickapps/crispify/: ExampleInstrumentedTest.kt  ProcessTextInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md  gemma-3-270m-it-Q4_K_M.gguf.placeholder
app/src/main/cpp/: CMakeLists.txt  build-info.cpp  crispify_jni.cpp  llama_wrapper.cpp  llama_wrapper.h  token_callback.cpp
app/src/main/java/com/clickapps/crispify/: MainActivity.kt  ProcessTextActivity.kt
app/src/main/res/raw/: prompt_template_v1.txt
app/src/main/res/values/: themes.xml
app/src/test/java/com/clickapps/crispify/: ExampleUnitTest.kt  ProcessTextActivityIntentTest.kt  ProcessTextManifestTest.kt
app/src/test/resources/: robolectric.properties
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+32 files in other folders)
